# Sandwich

./: .gitignore  CMakeLists.txt  Sandwich-Generate.bat  readme.md
source/: CMakeLists.txt
source/LibSandwich/: CMakeLists.txt
source/LibSandwich/private/: ComponentManager.cpp  Entity.cpp  HierarchyComponent.cpp  Renderer.cpp  SandwichApp.cpp
source/LibSandwich/public/: BgfxLogo.h  ComponentManager.h  Entity.h  HierarchyComponent.h  Renderer.h  SandwichApp.h  TransformComponent.h
source/main/: CMakeLists.txt
source/main/private/: main.cpp
source/math/public/: Vector.h
